# IdaCourse

lesson1/: CMakeLists.txt  README.md
lesson1/.cache/clangd/index/: lesson1.cpp.A12B5D84D7D0D9F5.idx
lesson1/src/: lesson1.cpp
